--- a/package.json
+++ b/package.json
@@ -36,6 +36,9 @@
     "@babel/preset-env": "^7.13.9",
     "@babel/preset-react": "^7.12.13",
     "babel-loader": "^8.2.2",
+    "csp-webpack-plugin": "^2.0.2",
+    "file-loader": "^6.2.0",
+    "html-webpack-plugin": "^5.3.1",
     "nodemon": "^2.0.7",
     "webpack": "^5.24.3",
     "webpack-cli": "^4.5.0",
